Miscellaneous Changes for Configuring Keycloak
